Fix project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Curation by Jessica Graham",
+  "name": "jgraham-curation",
   "private": true,
   "version": "0.0.0",
   "description": "A simple presentation of curated links",
